--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
